--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -5,7 +5,8 @@
 
     
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="">
+        <form class="col s12" method="POST" action="{{ url_for('add_task') }}">
+            <!-- categories selection -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
@@ -18,6 +19,7 @@
                     <label for="category_name">Task category</label>
                 </div>
             </div>
+            <!-- task name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -26,6 +28,7 @@
                     <label for="task_name">Task name</label>
                 </div>
             </div>
+            <!-- task description -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
@@ -34,6 +37,7 @@
                     <label for="task_description">Task description</label>   
                 </div>
             </div>
+            <!-- date picker -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-calendar-alt prefix light-blue-text text-darken-4"></i>
@@ -42,6 +46,7 @@
                     <label for="due_date">Due date</label>
                 </div>
             </div>
+            <!-- is urgent toggle -->
             <div class="row">
                 <div class="input-field col s12">
                      <!-- Switch -->
@@ -53,6 +58,14 @@
                             Is urgent
                         </label>
                     </div>
+                </div>
+            </div>
+            <!-- submit button -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Add Task <i class="fas fa-plus-square right"></i>
+                    </button>
                 </div>
             </div>
         </form>
